# ot-exercise

./: README.md
tasks/week2/card/: pyproject.toml
tasks/week2/card/src/: card.py
travel-budget-app/: .coverage  .coveragerc  .env.test  .gitignore  README.md  pyproject.toml  tasks.py
travel-budget-app/data/: database.sqlite
travel-budget-app/documentation/: architecture.md  changelog.md  specification.md  testing.md  time-accounting.md  user-manual.md  user_manual.md
travel-budget-app/documentation/pictures/: Untitled Diagram.drawio
travel-budget-app/src/: build.py  config.py  database_connection.py  index.py  init_database.py  init_trips_database.py  ui.py  user_repository.py
travel-budget-app/src/entities/: expense.py  trip.py  user.py
travel-budget-app/src/errors/: errors_handling.py
travel-budget-app/src/repositories/: expense_repository.py  trip_repository.py  user_repository.py
travel-budget-app/src/services/: expense_service.py  trip_service.py  user_service.py
travel-budget-app/src/tests/: ui_test.py  user_repository_test.py
travel-budget-app/src/tests/repositories/: expense_repository_test.py  trip_repository_test.py  user_repository_test.py
travel-budget-app/src/tests/services/: expense_service_test.py  trip_service_test.py  user_service_test.py
travel-budget-app/src/tests/testing_env/: test_config.py  test_database_connection.py  test_repository.py  (+1 more)
travel-budget-app/src/ui/: add_expense.py  create_user.py  login.py  new_trip.py  trip_statistics.py  trip_view.py  trips_list.py  trips_view.py  ui.py  user_menu.py  user_statistics.py
(+20 files in other folders)
