[tool.poetry]
name = "week2-tasks"
version = "0.1.0"
description = ""
authors = ["gabikakol <gabriela.kakol@helsinki.fi>"]
readme = "README.md"
packages = [{include = "week2_tasks"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
